# CppHelloWorldTemplate

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: CMakeLists.txt  main.cpp
{{cookiecutter.repo_name}}/.devcontainer/: Dockerfile  devcontainer.json
